fixed iframe overflow issue

--- a/src/styles/global/blog.css
+++ b/src/styles/global/blog.css
@@ -148,10 +148,6 @@ img.cover {
 	overflow-wrap: break-word;
 	word-break: break-word;
 
-	iframe {
-		width: 65ch;
-	}
-
 	h1 {
 		font-family: var(--font-serif);
 	}
@@ -196,20 +192,19 @@ img.cover {
   background-color: var(--color-primary-glare);
 }
 
-	.product-image {
-			width: 100%;
-			max-width: 89%;
-			max-width: fit-content;
-			max-height: 650px;
-			border-radius: 12px;
-			object-fit: contain;
-			box-shadow: 0px 0px 9px rgba(0,0,0,0.1);
-	}
+.product-image {
+	width: 100%;
+	max-width: 89%;
+	max-width: fit-content;
+	max-height: 650px;
+	border-radius: 12px;
+	object-fit: contain;
+	box-shadow: 0px 0px 9px rgba(0,0,0,0.1);
+}
 
-
-
-@media (min-width: 37.75em) {
-	.post iframe {
-		width: 100%;
-	}
+/* SPECIFICS */
+.video-embed {
+    width: 100%;
+    max-width: 100%;
+    aspect-ratio: 16/9;
 }
